Update index.html google verfication

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="d2nRAddWUy7sDmK4PQ4XCcaQiQbdpRo781617HZlYtI" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiny Wins Daily</title>
@@ -1382,3 +1383,4 @@
     </script>
 </body>
 </html>
+
